hard-gists/5735359/run.log
=== Docker Run Log for 5735359 ===
Started at: Mi 29. Okt 15:56:17 CET 2025

[2025-10-29 15:56:18] START: Running container for 5735359
[2025-10-29 15:56:18] SUCCESS: Container 3bcdefb67ec9dfcfd6b4b4a04f8493b54f74405c0d526ef1e873514c0dcbb742 started for 5735359
=== Container logs for 5735359 ===
  File "/snippet.py", line 25
    print "mean {:.2f}".format(numpy.array(areas).mean())
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5735359 ===
[2025-10-29 15:56:20] INFO: Container 3bcdefb67ec9dfcfd6b4b4a04f8493b54f74405c0d526ef1e873514c0dcbb742 has stopped
